--- a/lab2.html
+++ b/lab2.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <head>
-    <title>About Me</title>
+   <title>About Me</title>
 </head>
 <body>
-    <h1>PRESLEY FLOYD</h1>
-  <h2> About Me </h2>
-        <img src="IMG_1.jpg" alt="Four women in Gillette Stadium infrount of a revs Win! sign"> 
-        <p> I am a sophomore graphic design student at Lesley University. I chose graphic design because I love being creative. In my free time, I love reading, crocheting, and take day trips with my friend.</p>
+   <h1>PRESLEY FLOYD</h1>
+        <h2> About Me </h2>
+                <p> Hi, my name is Presley Floyd. I'm from Massachusetts, and I'm a sophomore at Lesley University, majoring in graphic design because I love being creative. I hope to use design as a tool to do good, to "Make a Difference <em>and</em> Make a living"- Noah Scalin. I love typography; I want to create type that is both beautiful and meaningful.</p>
+            <img src="IMG_1.jpg" alt="Four women in Gillette Stadium in front of a Revs Win! sign">
+        <h2>For Fun I:</h2>
+            <ul>
+                <li>Read</li>
+                <li>crochet</li>
+                <li>Adventure with my friends</li>
+            </ul>
+        <h2>My Favorite Work</h2>
+            <img src="Presley_floyd_Alphabet copy.jpg" alt=" cursive alphabet with different flowers on each letter" >
+                <p>This was a project I did for Type 1, where we had to create our own alphabet. I chose to base mine on cursive writing, and for each letter, I drew a flower whose name started with that letter.</p>
+            <img src="thehophouse.jpg" alt=" the word 'the hop house beer list' stacked and stretched horizontally">
+                <p> This is a project I am currently working on in Type Two. We are making beer posters, and I really love the way I manipulated the type in this.</p>
+            <Img src="colorfullflowes.jpg" alt="yellow, orange, purple, and pink flowers with green leaves">
+                <p>I took this photo while I was learning to use my Canon camera, and I love the variety of colors in it. I used it as part of my monogram.</p>
 </body>
 </html>
