--- a/lab2.html
+++ b/lab2.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
+<html>
 <head>
    <title>About Me</title>
 </head>
 <body>
-   <h1>PRESLEY FLOYD</h1>
-        <h2> About Me </h2>
+   <h1>presley floyd</h1>
+        <h2> about me </h2>
                 <p> Hi, my name is Presley Floyd. I'm from Massachusetts, and I'm a sophomore at Lesley University, majoring in graphic design because I love being creative. I hope to use design as a tool to do good, to "Make a Difference <em>and</em> Make a living"- Noah Scalin. I love typography; I want to create type that is both beautiful and meaningful.</p>
             <img src="IMG_1.jpg" alt="Four women in Gillette Stadium in front of a Revs Win! sign">
-        <h2>For Fun I:</h2>
+        <h2>for fun i:</h2>
             <ul>
                 <li>Read</li>
                 <li>crochet</li>
                 <li>Adventure with my friends</li>
             </ul>
-        <h2>My Favorite Work</h2>
+        <h2>my favorite work</h2>
             <img src="Presley_floyd_Alphabet copy.jpg" alt=" cursive alphabet with different flowers on each letter" >
                 <p>This was a project I did for Type 1, where we had to create our own alphabet. I chose to base mine on cursive writing, and for each letter, I drew a flower whose name started with that letter.</p>
             <img src="thehophouse.jpg" alt=" the word 'the hop house beer list' stacked and stretched horizontally">
