--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
    <h1>presley floyd</h1>
         <h2> about me </h2>
-                <p> Hi, my name is Presley Floyd. I'm from Massachusetts, and I'm a sophomore at Lesley University, majoring in graphic design because I love being creative. I hope to use design as a tool to do good, to "Make a Difference <em>and</em> Make a living"- Noah Scalin. I love typography; I want to create type that is both beautiful and meaningful.</p>
+                <p> Hi, my name is Presley Floyd, my birthday is Febuary 22<sup>nd</sup> 2006 and i am 19. I'm from Massachusetts, and I'm a sophomore at Lesley University, majoring in graphic design because I love being creative. I hope to use design as a tool to do good, to "Make a Difference <em>and</em> Make a living"- Noah Scalin. I love typography; I want to create type that is both beautiful and meaningful.</p>
             <img src="IMG_1.jpg" alt="Four women in Gillette Stadium in front of a Revs Win! sign">
         <h2>for fun i:</h2>
             <ul>
@@ -14,12 +14,36 @@
                 <li>crochet</li>
                 <li>Adventure with my friends</li>
             </ul>
-        <h2>my favorite work</h2>
+        <h2>my <strong>favorite</strong> work</h2>
+        <hr>
             <img src="Presley_floyd_Alphabet copy.jpg" alt=" cursive alphabet with different flowers on each letter" >
                 <p>This was a project I did for Type 1, where we had to create our own alphabet. I chose to base mine on cursive writing, and for each letter, I drew a flower whose name started with that letter.</p>
             <img src="thehophouse.jpg" alt=" the word 'the hop house beer list' stacked and stretched horizontally">
                 <p> This is a project I am currently working on in Type Two. We are making beer posters, and I really love the way I manipulated the type in this.</p>
             <Img src="colorfullflowes.jpg" alt="yellow, orange, purple, and pink flowers with green leaves">
                 <p>I took this photo while I was learning to use my Canon camera, and I love the variety of colors in it. I used it as part of my monogram.</p>
-</body>
+        <h2>favorite memories this year </h2>
+        <hr>
+            <table border="3" cellpadding="3" width="2">
+                <tr>
+                    <th>who?</th>
+                    <th>What?</th>
+                </tr>
+                <tr>                    
+                    <td>My sister maddy</td>
+                    <td>picking out her engament ring</td>
+                </tr>
+                <tr>
+                    <td>my friends maddie and kirsten</td>
+                    <td>makeing pizzas and watching movies</td>
+                </tr>
+                <tr>
+                    <td>my nonna</td>
+                    <td>haveing a crochet and knitting night</td>
+                </tr>
+        </table>
+            <a href="https://www.etsy.com/listing/1534569587/late-summer-sunsets-blanket?ls=s&ga_order=most_relevant&ga_search_type=all&ga_view_type=gallery&ga_search_query=crochet+blanket+sunset&ref=sr_gallery-1-1&sr_prefetch=1&pf_from=search&sts=1&dd=1&nob=1&content_source=35b8ad6f-b0e7-490b-a23d-023abca16e8c%253ALT7db90d6be291e5d032ddeb78d8d0d0e3f5420210&organic_search_click=1&logging_key=35b8ad6f-b0e7-490b-a23d-023abca16e8c%3ALT7db90d6be291e5d032ddeb78d8d0d0e3f5420210"> My curent crochet project pattern</a>
+        <h2>my favorite music video</h2>
+        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/RsEZmictANA?si=8t0Uvw-bjKJ63erO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </body>
 </html>
